--- a/index.html
+++ b/index.html
@@ -1,30 +1,91 @@
-<!DOCTYPE html><html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"><!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"><link rel="icon" href="data:">
-<title>たいとる</title>
-<link rel="stylesheet" href="index.css">
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <link rel="stylesheet" href="index.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> 
+    <title>大阪公大高専 エネルギー機械コース</title>
 </head>
-
 <body>
-  <div class=header>
-    <h1>たいとる</h1>
-    <div>せつめいせつめい</div>
-  </div>
-  <div class=main>
-    <div>
-      <h2>さぶたいとる１</h2>
-      <div>
-        ほんぶん１
-      </div>
-    </div>
+    <h1><i class="fa-solid fa-ship"></i> エネルギー機械コース <i class="fa-solid fa-gears"></i></h1>
+    <p><strong>エネルギー機械コース</strong>の実習では<strong>旋盤やボール盤、
+        フライス盤</strong>などの工作機械を用いた<strong>金属加工</strong>をし、
+        文鎮や空気エンジンなどの様々な製品づくりに取り組んでいます。</p>
 
-    <div>
-      <h2>さぶたいとる２</h2>
-      <div>
-        ほんぶん２
-      </div>
-    </div>
-  </div>
-  <div class=footer>
-    ふったー
-  </div>
+</div>
+
+<img src="images/sagyousiteru.jpg" alt="私の写真" width="100%">
+
+
+<h2 class="ingreients">旋盤</h2>
+
+<p>旋盤は主に<a href="https://sakusakuec.com/shop/pg/1sbite01/?srsltid=AfmBOooWrWXn1zgu4x-mH2iacyePNS49F6P9Befsqcuv4eFKd56nbdZD">バイト</a>と呼ばれる切削工具を用いて材料を削ります。実習で使用する<a href="https://sakusakuec.com/shop/pg/1lathe/?srsltid=AfmBOornfltBLikMrNfVg1ANd0zzecAFVDeTY0bmpyRgZNukTP0uQAdV">旋盤</a>は汎用旋盤であり、デジタルメータや自動送り機能などがついてとても便利です。
+    汎用旋盤を利用すれば右下の写真のように同じ形の車輪を寸法の誤差を最小限に抑えて加工することができます。
+</p>
+<div class="photo-gallery"></div>
+<img src="images/sennbann3.png" alt="私の写真" width="48%">
+
+</div>
+<p><strong>実習で使用する切削工具</strong></p>
+<ul>
+    <li>片刃バイト</li>
+    <li>面取りバイト</li>
+    <li>突っ切りバイト</li>
+    <li>総形バイト</li>
+    <li>超硬スローアウェイ片刃バイト</li>
+    <li>ローレット</li>
+    <li>センタドリル</li>
+    <li>ドリル</li>
+    <li>エンドミル　　など</li>
+</ul>
+
+
+<h2 class="ingreients">ボール盤</h2>
+<p>材料に丸い穴を開けたい際に使用するのが<a href="https://ja.wikipedia.org/wiki/%E3%83%9C%E3%83%BC%E3%83%AB%E7%9B%A4">ボール盤</a>です。実習で使用するボール盤には直立ボール盤と卓上ボール盤があります。直立ボール盤は直径がφ10mm程の
+    大きな穴を開ける際に使い、卓上ボール盤では比較的直径の小さな穴を開ける際に使うなどして使い分けています。
+    ボール盤を使用すると右下の写真のようにアルミニウム合金に複数の穴を開け、素敵なオブジェを制作することも可能です。
+</p>
+
+<div class="photo-gallery"></div>
+<img src="images/bo-rubann3.png" alt="私の写真" width="48%">
+
+</div>
+<p><strong>実習で使用する切削工具</strong></p>
+<p>ドリル　　　など</p>
+
+
+
+
+<h2 class="ingreients">フライス盤</h2>
+
+<p>材料に溝を掘りたい、より正確な位置にエンドミルで穴を開けたいなどとお言った際に使用するのが<a href="https://ja.wikipedia.org/wiki/%E3%83%95%E3%83%A9%E3%82%A4%E3%82%B9%E7%9B%A4">フライス盤</a>です。
+実習で使用するフライス盤も同様にデジタルメータや自動送り機能がついており切削面のバリをほとんど残すことなく材料を加工することが可能です。
+フライス盤を利用すれば右下に示す写真のような複雑な形状の製品を製作することも可能です。</p> 
+
+
+    <img src="images/huraisubann3.png" alt="私の写真" width="50%">
+    
+
+<p><strong>実習で使用する切削工具</strong></p>
+<p>エンドミル　　　など</p>
+
+<h3 class="ingreients">専門科目</h3>
+
+<p>エネルギー機械コースでは材料力学や熱力学をはじめとし、様々な専門科目でプラントや生産機械の設計、航空機や船の設備などに繋がる知識を深めることが可能です。</p>
+<p><strong>エネルギー機械コースの専門科目</strong></p>
+<ul>
+     <li>機械工作概論</li> 
+     <li>材料力学入門</li>
+     <li>熱力学入門</li>
+     <li>流体力学入門</li>
+     <li>基礎製図</li>
+     <li>CAD製図</li>
+     <li>機械工作法</li>
+     <li>機械工作実習</li>
+     <li>エネルギー変換工学　　　など</li>
+
+</ul>
+
 </body>
 </html>
