--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <h2 class="ingreients">旋盤</h2>
 
-<p>旋盤は主に<a href="https://sakusakuec.com/shop/pg/1sbite01/?srsltid=AfmBOooWrWXn1zgu4x-mH2iacyePNS49F6P9Befsqcuv4eFKd56nbdZD">バイト</a>と呼ばれる切削工具を用いて材料を削ります。実習で使用する<a href="https://sakusakuec.com/shop/pg/1lathe/?srsltid=AfmBOornfltBLikMrNfVg1ANd0zzecAFVDeTY0bmpyRgZNukTP0uQAdV">旋盤</a>は汎用旋盤であり、デジタルメータや自動送り機能などがついてとても便利です。
+<p><a href="https://sakusakuec.com/shop/pg/1lathe/?srsltid=AfmBOornfltBLikMrNfVg1ANd0zzecAFVDeTY0bmpyRgZNukTP0uQAdV">旋盤</a>は主に<a href="https://sakusakuec.com/shop/pg/1sbite01/?srsltid=AfmBOooWrWXn1zgu4x-mH2iacyePNS49F6P9Befsqcuv4eFKd56nbdZD">バイト</a>と呼ばれる切削工具を用いて材料を削ります。実習で使用する旋盤は汎用旋盤であり、デジタルメータや自動送り機能などがついてとても便利です。
     汎用旋盤を利用すれば右下の写真のように同じ形の車輪を寸法の誤差を最小限に抑えて加工することができます。
 </p>
 <div class="photo-gallery"></div>
@@ -44,7 +44,7 @@
 <h2 class="ingreients">ボール盤</h2>
 <p>材料に丸い穴を開けたい際に使用するのが<a href="https://ja.wikipedia.org/wiki/%E3%83%9C%E3%83%BC%E3%83%AB%E7%9B%A4">ボール盤</a>です。実習で使用するボール盤には直立ボール盤と卓上ボール盤があります。直立ボール盤は直径がφ10mm程の
     大きな穴を開ける際に使い、卓上ボール盤では比較的直径の小さな穴を開ける際に使うなどして使い分けています。
-    ボール盤を使用すると右下の写真のようにアルミニウム合金に複数の穴を開け、素敵なオブジェを制作することも可能です。
+    ボール盤を使用すると右下の写真のようにアルミニウム合金に複数の穴を開け、素敵なオブジェを製作することも可能です。
 </p>
 
 <div class="photo-gallery"></div>
@@ -59,7 +59,7 @@
 
 <h2 class="ingreients">フライス盤</h2>
 
-<p>材料に溝を掘りたい、より正確な位置にエンドミルで穴を開けたいなどとお言った際に使用するのが<a href="https://ja.wikipedia.org/wiki/%E3%83%95%E3%83%A9%E3%82%A4%E3%82%B9%E7%9B%A4">フライス盤</a>です。
+<p>材料に溝を掘りたい、より正確な位置にエンドミルで穴を開けたいなどと言った際に使用するのが<a href="https://ja.wikipedia.org/wiki/%E3%83%95%E3%83%A9%E3%82%A4%E3%82%B9%E7%9B%A4">フライス盤</a>です。
 実習で使用するフライス盤も同様にデジタルメータや自動送り機能がついており切削面のバリをほとんど残すことなく材料を加工することが可能です。
 フライス盤を利用すれば右下に示す写真のような複雑な形状の製品を製作することも可能です。</p> 
 
